force-app/main/default/objects/Session__c/fields/Added_to_the_Portal__c.field-meta.xml
<CustomField>
    <fullName>Added_to_the_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to the Portal</label>
    <type>Checkbox</type>
</CustomField>