force-app/main/default/objects/Session__c/fields/AuthCode__c.field-meta.xml
<CustomField>
    <fullName>AuthCode__c</fullName>
    <description>AuthCode</description>
    <inlineHelpText>AuthCode</inlineHelpText>
    <label>AuthCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>