force-app/main/default/objects/Session__c/fields/Booth_size__c.field-meta.xml
<CustomField>
    <fullName>Booth_size__c</fullName>
    <label>Booth size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>