force-app/main/default/objects/Session__c/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <label>Duration (Hour(s))</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>