force-app/main/default/objects/Session__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Session&apos;s Event</description>
    <inlineHelpText>Session&apos;s Event</inlineHelpText>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>