force-app/main/default/objects/Session__c/fields/Hall__c.field-meta.xml
<CustomField>
    <fullName>Hall__c</fullName>
    <label>Hall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision Hall</fullName>
            </value>
            <value>
                <fullName>Focus 1 Room</fullName>
            </value>
            <value>
                <fullName>Focus2 Room</fullName>
            </value>
            <value>
                <fullName>IVORA Hall</fullName>
            </value>
            <value>
                <fullName>IXORA Hall</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>