force-app/main/default/objects/Session__c/fields/Moderator_Url__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Url__c</fullName>
    <formula>$Label.EventUrl &amp; &quot;?session=&quot; &amp; Key__c &amp; &quot;&amp;authCode=&quot;&amp; AuthCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator Url</label>
    <type>Text</type>
</CustomField>