force-app/main/default/objects/Session__c/fields/Preferred_Times__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Times__c</fullName>
    <label>Preferred Times</label>
    <length>255</length>
    <type>Text</type>
</CustomField>