force-app/main/default/objects/Session__c/fields/Recorded_Session__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recorded Session?</label>
    <type>Checkbox</type>
</CustomField>