force-app/main/default/objects/Session__c/fields/Schedule_description__c.field-meta.xml
<CustomField>
    <fullName>Schedule_description__c</fullName>
    <label>Schedule description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>