force-app/main/default/objects/Session__c/fields/Schedule_name__c.field-meta.xml
<CustomField>
    <fullName>Schedule_name__c</fullName>
    <label>Schedule name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>