force-app/main/default/objects/Session__c/fields/Segment_name__c.field-meta.xml
<CustomField>
    <fullName>Segment_name__c</fullName>
    <label>Segment name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>