force-app/main/default/objects/Session__c/fields/Session_description__c.field-meta.xml
<CustomField>
    <fullName>Session_description__c</fullName>
    <label>Session description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>