force-app/main/default/objects/Session__c/fields/Speaker_Details__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Details__c</fullName>
    <label>Speaker Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>