force-app/main/default/objects/Session__c/fields/Speaker_names__c.field-meta.xml
<CustomField>
    <fullName>Speaker_names__c</fullName>
    <label>Speaker names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>