force-app/main/default/objects/Session__c/fields/SwagVoucher__c.field-meta.xml
<CustomField>
    <fullName>SwagVoucher__c</fullName>
    <label>Swag/Voucher?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Swag</fullName>
                <default>true</default>
                <label>Random Swag</label>
            </value>
            <value>
                <fullName>PakDreamin T-shirt</fullName>
            </value>
            <value>
                <fullName>$400 worth SF Cert Voucher</fullName>
            </value>
            <value>
                <fullName>Pack of Stickers</fullName>
            </value>
            <value>
                <fullName>Pack of Badges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>