force-app/main/default/objects/Session__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Newbies,Admin</fullName>
            </value>
            <value>
                <fullName>Admin,Developers,Architect</fullName>
            </value>
            <value>
                <fullName>Newbies,Admin,Architect</fullName>
            </value>
            <value>
                <fullName>Developers,Architect</fullName>
            </value>
            <value>
                <fullName>Admin,Developers</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Newbies,Admin,Developers,Architect</fullName>
            </value>
            <value>
                <fullName>Speakers,Moderators</fullName>
            </value>
            <value>
                <fullName>Newbies</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Developers</fullName>
            </value>
            <value>
                <fullName>Newbies,Admin,Developers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>