force-app/main/default/objects/Session__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <formula>$Label.EventUrl &amp; &quot;?session=&quot; &amp; Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Url</label>
    <type>Text</type>
</CustomField>