force-app/main/default/objects/Session__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>