force-app/main/default/objects/Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Schedule_name__c</columns>
    <columns>Speaker_names__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Url__c</columns>
    <columns>Moderator_Url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>