force-app/main/default/objects/Session__c/listViews/Sessions2024.listView-meta.xml
<ListView>
    <fullName>Sessions2024</fullName>
    <columns>NAME</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Recorded_Session__c</columns>
    <columns>Priority__c</columns>
    <columns>Moderator_Url__c</columns>
    <columns>Email__c</columns>
    <columns>Duration_Hours__c</columns>
    <columns>SwagVoucher__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>PakDreamin 24</value>
    </filters>
    <label>2024 Sessions</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>